# univention-portal

./: .dockerignore  .env  .env.example  .env.local_example  .env.production  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.common.yml  .gitlab-ci.debian.yml  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config-legacy.yaml  .pre-commit-config.yaml  .releaserc.yaml  .tiltignore  .yamllint  33univention-portal.inst  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.dev.md  README.md  REVIEW.md  Tiltfile  babel.config.js  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  investigator.py  jest.config.js  mkdocs.yml  package-lock.json  package.json  process_vue_files.sh  pyproject.toml  renovate.json  requirements-slim.txt  requirements-test.txt  requirements.txt  (+8 more)
.gitlab/: CODEOWNERS
.storybook/: main.js  preview.js  preview.ts
ansible/: README.md  apache2-portal-updates.yml  exp-409-debug-portal-server.yaml  exp-409-spike-containers.yaml  fetch-secrets-from-ucs-machine.yaml  fix-vm-date.yaml  hosts.yaml  hosts.yaml.example  initialize-ucs-vm.yaml  inventory-local.yaml  inventory.yaml  jupyterlab.yaml  kind-environment.yaml  minikube-environment.yaml  mkdocs-static-site.yaml  playbook.yaml  python3-environment.yaml  remove-ucs-vm.yaml  requirements.yaml  restore.yaml  set-up-ucs-vm.yaml  set-up-vm.yaml  start-ucs-vm.yaml  stop-ucs-vm.yaml  ucs-expose-portal-json-files.yaml  ucs-login-with-local-keycloak.yaml  ucs-umc-open-for-portal-server.yaml  ucs-umc-open-from-external.yaml  ucs-vm-adapted-for-local-run.yaml  (+1 more)
app/: compose  (+10 more)
docker/healthcheck/: Dockerfile  pyproject.toml  requirements.txt
docker/healthcheck/checks/: conftest.py  test_reverse_proxy.py  test_ucs_machine.py
notifications-api/: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  KEYCLOAK.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  freeze-requirements.sh  logging.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
notifications-api/app/: expiry_pruning.py  logs.py  main.py  messaging.py  redis.py
notifications-api/app/api/: __init__.py  api.py  auth.py
notifications-api/app/api/v1/: __init__.py  api.py
notifications-api/app/auth/: keycloak.py
notifications-api/app/core/: __init__.py  config.py  errors.py  logging.py
notifications-api/app/crud/: notification_service.py
notifications-api/app/db/: __init__.py  db.py
notifications-api/app/models/: __init__.py  notification.py  notification_model.py
notifications-api/docs/: expiry-pruning.md
notifications-api/migrations/: env.py  script.py.mako  seed.py
notifications-api/migrations/versions/: 2b7d4561b06a_update_notification_model.py  3d4de5e11556_.py  7e3f5108c506_add_notifications_table.py  9a6b4364a7f7_add_notification_popup.py  c83d839fbaad_create_table_notification.py  e63f346068f6_add_notification_link.py
notifications-api/tests/: conftest.py  test_expiry_pruning.py  test_messaging.py  test_notification_api.py  test_notification_base.py  test_notification_service.py
notifications-api/tests/load/: README.md  locustfile.py
portal-backend/: .dockerignore  .gitignore  README.md  portal.json  pyproject.toml
portal-backend/app/: main.py
portal-backend/app/api/: api.py
portal-backend/app/api/v1/: api.py  portal.py
portal-backend/app/core/: config.py
(+1047 files in other folders)
