[tool.poetry]
name = "Souv AP Notifications"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^22.1.0"
alembic = "^1.8.1"
fastapi = "^0.85.0"
pydash = "^5.1.1"
SQLAlchemy = "^1.4.41"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
Faker = "^15.1.0"
invoke = "^1.7.3"
pytest = "^7.2.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
