[project]
name = "notifications-api"
version = "0.1.0"
description = "Univention Portal - Notification API"
maintainers = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "GNU Affero General Public License v3"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  'aiofiles >= 22.1.0',
  'alembic >= 1.8.1',
  'fastapi >= 0.85.0',
  'pydash >= 5.1.1',
  'SQLAlchemy >= 1.4.41',
  'sqlmodel >= 0.0.8',
  'uvicorn[standard] >= 0.18.3',
  'pydantic >= 1.10.2',
  'sse-starlette >= 1.2.1',
  # TODO: Replace with psycopg2
  'psycopg2',
  'pyzmq',
]

[project.optional-dependencies]
dev = [
  'Faker',
  'httpx',
  'invoke',
  'ipdb',
  'pytest',
  'pytest-asyncio',
  'pytest-cov',
  'pytest-mock',
  'requests',
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]

[tool.setuptools.packages.find]
include = ["app"]
