[tool.poetry]
name = "Souv AP Portal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^22.1.0"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
pydash = "^5.1.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
