[project]
name = "dev-healthcheck"
version = "0.1.0"
description = "Health checks for the development environment"
maintainers = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "GNU Affero General Public License v3"}
requires-python = ">=3.9"
dependencies = [
  'pytest',
  'requests',
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
